--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter "https://twitter.com/Chengxin_M_Xu"
+  username               : "https://twitter.com/Chengxin_M_Xu"
 facebook:
   username               :
   app_id                 :
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Chengxin Xu"
+  name             : "Xu Chengxin"
   avatar           : "profile.png"
   bio              : "Assistant Professor at Seattle University"
-  location         : "Location"
+  location         : "Seattle, WA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=PDN7A5sAAAAJ&hl=en&oi=ao"
