--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/Chengxin_M_Xu"
+  twitter          : "@Chengxin_M_Xu"
   vine             :
   weibo            :
   xing             :
