--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xu Chengxin's Website"
 title_separator          : "-"
 name                     : &name "Xu Chengxin"
 description              : &description "Assistant professor, Seattle University"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      :  https://cxuchengxin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
