--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Xu Chengxin's Website"
 title_separator          : "-"
 name                     : &name "Xu Chengxin"
 description              : &description "Assistant professor, Seattle University"
-url                      :  "https://cxuchengxin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      :  "https://cxuchengxin.github.io/website" # Don't change.
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "cxuchengxin.github.io/website"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
