--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Xu Chengxin"
+  name             : "Chengxin Xu"
   avatar           : "profile.png"
   bio              : "Assistant Professor"
   location         : "Seattle, WA"
